--- a/main/index.html
+++ b/main/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+<script>
+alert("HEllo, Suka");
+</script>
 <body>
     <ul>
         <li><a href="https://docs.google.com/document/d/1yNYSp3JhA2uDz_RHynZsmqr5FuOan7I5YUWaRlKoK_Y/edit?usp=sharing">Матлогика</a></li>
