--- a/main/index.html
+++ b/main/index.html
@@ -8,10 +8,8 @@
 
 <body>
     <ul>
-        <li><a href="https://docs.google.com/document/d/1yNYSp3JhA2uDz_RHynZsmqr5FuOan7I5YUWaRlKoK_Y/edit?usp=sharing">Матлогика</a></li>
+        <li><a href="https://docs.google.com/document/d/1yNYSp3JhA2uDz_RHynZsmqr5FuOan7I5YUWaRlKoK_Y/edit?usp=sharing">Математическая логика</a></li>
+        <li><a href="https://docs.google.com/document/d/1LTDOPB7EaVuCJOa7pehPasdVz105XbqE4kNbjp9pCvc/edit?usp=sharing">Вычислительная математика</a></li>
     </ul>
 </body>
-<script>
-alert("HEllo, Suka");
-</script>
 </html>
