--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
 </head>
 
 <body>
+    <h2>Лекции:</h2>
     <ul>
-        <li><a href="https://docs.google.com/document/d/1yNYSp3JhA2uDz_RHynZsmqr5FuOan7I5YUWaRlKoK_Y/edit?usp=sharing">Математическая логика</a></li>
-        <li><a href="https://docs.google.com/document/d/1LTDOPB7EaVuCJOa7pehPasdVz105XbqE4kNbjp9pCvc/edit?usp=sharing">Вычислительная математика</a></li>
+        <li><a href="https://docs.google.com/document/d/1yNYSp3JhA2uDz_RHynZsmqr5FuOan7I5YUWaRlKoK_Y/edit?usp=sharing"><b>Лекция</b> Математическая логика</a></li>
+        <li><a href="https://docs.google.com/document/d/1LTDOPB7EaVuCJOa7pehPasdVz105XbqE4kNbjp9pCvc/edit?usp=sharing"><b>Лекция</b> Вычислительная математика</a></li>
+
+    </ul>
+    <h2>Зачеты:</h2>
+    <ul>
+        <li><a href="https://docs.google.com/document/d/1o-YtQSGeiaM1ff3m4usDr4v7Lrb7EzdFR96JUEykTug/edit"><b>Зачет</b> по матлогике</a></li>
+        
+    </ul>
+    <h2>Зкзамены</h2>
+    <ul> 
     </ul>
 </body>
 </html>
