--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li><a href="https://docs.google.com/document/d/1yNYSp3JhA2uDz_RHynZsmqr5FuOan7I5YUWaRlKoK_Y/edit?usp=sharing"><b>Лекция</b> Математическая логика</a></li>
         <li><a href="https://docs.google.com/document/d/1s_aBaupkVembzO-YVEncknG9j_asIyZ2gCC6C2jbvC0/edit?usp=sharing"><b>Лекция</b> Вычислительная математика</a></li>
         <li><a href="https://vk.com/doc92326560_520487664?hash=44cae3e1ad6bb159f2&dl=f04b7feb07eda711f8"><b>Лекция</b> Программирование 2-й семестр</a></li>
+        <li><a href="https://vk.com/doc92326560_528430702?hash=9a76d778ecca1000ab&dl=02656a4455bb660095"><b>Лекция</b> АТЧ 3-й семестр</a></li>
     </ul>
     <h2>Зачеты:</h2>
     <ul>
