--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="main/css/bootstrap.min.css" >
 </head>
 
 <body>
+    <div class="row">
     <h1>Официальный сайт матобеса</h1>
     <img src="https://ichef.bbci.co.uk/news/410/cpsprodpb/1ED1/production/_110898870_62ef0a65-74d3-44dd-b506-93af85983785.jpg">
     <h1>КАРАНТИН</h1>
-
+</div>
+<div class="row">
+<div class="col-6">
     <h3>"Дифференциальные Уравнения" <b>(До 31.03)</b></h3>
     <p>
         <ul>
@@ -21,12 +25,14 @@
             <br>
             <b>Модуль 2</b>
             <li>Изучить и законспектировать лекции 1,2: <br> 
-                «Дифференциальные уравнения высших порядков. Уравнения, допускающие понижение порядка».</li>
+                «Дифференциальные уравнения высших порядков. <br>
+                Уравнения, допускающие понижение порядка».</li>
             <li>Выполнить ИДЗ 13-16</li>
             <li>Пройти контрольное тестирование 3</li>
         </ul>
     </p>
-
+</div>
+<div class="col-6">
     <h3>"Математический анализ"</h3>
     <p>
         <ul>
@@ -35,7 +41,8 @@
                 <li>Выполнить задания 1-9 из ТР ТФКП</li>
         </ul>
     </p>
-
+</div>
+</div>
 
 
     <h3>"Английский Язык" <b>(До 26.03)</b></h3>
