--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>MathObes</title>
     <link rel="stylesheet" href="main/css/bootstrap.min.css" >
 </head>
 
-<body>
+<body style="margin:20px">
     <div class="row">
+ 
     <h1>Официальный сайт матобеса</h1>
-    <img src="https://ichef.bbci.co.uk/news/410/cpsprodpb/1ED1/production/_110898870_62ef0a65-74d3-44dd-b506-93af85983785.jpg">
-    <h1>КАРАНТИН</h1>
 </div>
+<img width="250" src="https://ichef.bbci.co.uk/news/410/cpsprodpb/1ED1/production/_110898870_62ef0a65-74d3-44dd-b506-93af85983785.jpg">
+    <h1>КАРАНТИН</h1>
+
 <div class="row">
 <div class="col-6">
     <h3>"Дифференциальные Уравнения" <b>(До 31.03)</b></h3>
@@ -44,7 +46,8 @@
 </div>
 </div>
 
-
+<div class="row">
+    <div class="col-6">
     <h3>"Английский Язык" <b>(До 26.03)</b></h3>
     <p>
         <ul>
@@ -54,33 +57,42 @@
             <li>Реферат (???????????????)<li>
         </ul>
     </p>
-
+    </div>
+    <div class="col-6">
+            <h3>"Програмирование"</h3>
+            <p>
+                <ul>
+                    <li>Делай лабы и не выебывайся</li>
+                </ul>
+            </p>
+            </div>
+</div>
 
     <h3>"Теория Вероятности и математическая статистика"</h3>
     <p>
         <ul>
                 <li>Необходимо изучить: электронный учебник (ЭУ) глава 1, глава 2 (2.1; 2.3; 2.4; 2.5);<br>
-                     ТВ под ред. Зарубина 1.3. Сигма-алгебра событий (стр. 32-35), 2.5 Аксиоматическое определение вероятности ( стр.59-66);<br> 
+                     ТВ под ред. Зарубина 1.3. Сигма-алгебра событий (стр. 32-35),<br> 2.5 Аксиоматическое определение вероятности ( стр.59-66);<br> 
                      ТВ Битнер Г.Г. (стр.17-18)</li>
                 <li>Необходимо выполнить: задания предыдущего занятия; изучить ЭУ и разобрать приведенные примеры: <br>
-                    глава 2 (2.2 Вычисление вероятностей с помощью формул комбинаторики, Схема выбора, приводящая к сочетаниям, Схема выбора, приводящая к размещениям). <br>
-                    Прислать задание нужно в виде отчетов с вопросами, ответами и решениями задач до 24.03.2020, на электронную почту.</li>
+                    глава 2 (2.2 Вычисление вероятностей с помощью формул комбинаторики, <br>Схема выбора, приводящая к сочетаниям, Схема выбора, приводящая к размещениям). <br>
+                    Прислать задание нужно в виде отчетов с вопросами, <br> ответами и решениями задач до 24.03.2020, на электронную почту.</li>
                 <li>Выполнить задания 1-9 из ТР ТФКП</li>
         </ul>
     <p>
-По окончании изучения материала до 24.03.2020 нужно пройти тестирование для чего использовать тестовые контрольные вопросы и задания по дисциплине ТВи МС по следующим разделам:
+По окончании изучения материала до 24.03.2020 нужно пройти тестирование для чего использовать тестовые <br> контрольные вопросы и задания по дисциплине ТВи МС по следующим разделам: <br>
 
-1. Основные понятия.Непосредственный подсчет вероятностей № 1 - № 2.
+1. Основные понятия.Непосредственный подсчет вероятностей № 1 - № 2. <br>
 
-2. Классическое определение вероятностей №13 - №23.
+2. Классическое определение вероятностей №13 - №23. <br>
 
-3. Комбинаторный метод вычисления вероятностей №24, 25, 26, 27, 28.
+3. Комбинаторный метод вычисления вероятностей №24, 25, 26, 27, 28. <br>
 
-Тесты прилагаются. Ответы присылать электронную почту.
+Тесты прилагаются. Ответы присылать электронную почту. <br>
 
-Замечания:
+Замечания: <br>
 
-1. Отчеты о выполненной работе с ответами и решениями помещать в личный кабинет каждого в электронной образовательной среде.</p>
+1. Отчеты о выполненной работе с ответами и решениями помещать<br> в личный кабинет каждого в электронной образовательной среде.</p>
     </p>
 </body>
 </html>
