--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>КАРАНТИН</h1>
 
 <div class="row">
-<div class="col-6">
+<div class="col-lg-6 col-12">
     <h3>"Дифференциальные Уравнения" <b>(До 31.03)</b></h3>
     <p>
         <ul>
@@ -34,7 +34,7 @@
         </ul>
     </p>
 </div>
-<div class="col-6">
+<div class="col-lg-6 col-12">
     <h3>"Математический анализ"</h3>
     <p>
         <ul>
@@ -47,7 +47,7 @@
 </div>
 
 <div class="row">
-    <div class="col-6">
+    <div class="col-lg-6 col-12">
     <h3>"Английский Язык" <b>(До 26.03)</b></h3>
     <p>
         <ul>
@@ -58,7 +58,7 @@
         </ul>
     </p>
     </div>
-    <div class="col-6">
+    <div class="col-lg-6 col-12">
             <h3>"Програмирование"</h3>
             <p>
                 <ul>
