--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <li>Прислать на почту Асташиной оригинальный текст 12к символов + аннотацию + словарь терминов</li>
             <li>Перевести любые 4 абзаца из всего материала</li>
             <br>
-            <li>Реферат (???????????????)<li>
+            <li>Реферат (???????????????)</li>
         </ul>
     </p>
     </div>
@@ -67,7 +67,7 @@
             </p>
             </div>
 </div>
-
+<div style="margin:0px" class="row">
     <h3>"Теория Вероятности и математическая статистика"</h3>
     <p>
         <ul>
@@ -80,19 +80,22 @@
                 <li>Выполнить задания 1-9 из ТР ТФКП</li>
         </ul>
     <p>
+        <ol>
 По окончании изучения материала до 24.03.2020 нужно пройти тестирование для чего использовать тестовые <br> контрольные вопросы и задания по дисциплине ТВи МС по следующим разделам: <br>
 
-1. Основные понятия.Непосредственный подсчет вероятностей № 1 - № 2. <br>
+<li>Основные понятия.Непосредственный подсчет вероятностей № 1 - № 2. </li>
 
-2. Классическое определение вероятностей №13 - №23. <br>
+<li>Классическое определение вероятностей №13 - №23. </li>
 
-3. Комбинаторный метод вычисления вероятностей №24, 25, 26, 27, 28. <br>
+<li> Комбинаторный метод вычисления вероятностей №24, 25, 26, 27, 28. </li>
 
 Тесты прилагаются. Ответы присылать электронную почту. <br>
 
-Замечания: <br>
+Отчеты о выполненной работе с ответами и решениями помещать<br> в личный кабинет каждого в электронной образовательной среде.
 
-1. Отчеты о выполненной работе с ответами и решениями помещать<br> в личный кабинет каждого в электронной образовательной среде.</p>
+        </ol>
+</p>>
     </p>
+    </div>
 </body>
 </html>
