--- a/index.html
+++ b/index.html
@@ -12,90 +12,9 @@
  
     <h1>Официальный сайт матобеса</h1>
 </div>
-<img width="250" src="https://ichef.bbci.co.uk/news/410/cpsprodpb/1ED1/production/_110898870_62ef0a65-74d3-44dd-b506-93af85983785.jpg">
-    <h1>КАРАНТИН</h1>
-
+<h2>Теорвер</h2>
 <div class="row">
-<div class="col-lg-6 col-12">
-    <h3>"Дифференциальные Уравнения" <b>(До 31.03)</b></h3>
-    <p>
-        <ul>
-            <b>Модуль 1</b>
-            <li>Изучить лекции певрого модуля 1,2,3, отвечая на вопросы</li>
-            <li>Выполнить ИДЗ 6-12, отсканировать и прислать</li>
-            <li>Пройти контрольные тестирования по 1 и 2</li>
-            <br>
-            <b>Модуль 2</b>
-            <li>Изучить и законспектировать лекции 1,2: <br> 
-                «Дифференциальные уравнения высших порядков. <br>
-                Уравнения, допускающие понижение порядка».</li>
-            <li>Выполнить ИДЗ 13-16</li>
-            <li>Пройти контрольное тестирование 3</li>
-        </ul>
-    </p>
+<a href="PT.html">Теория вероятностей лекции по темам</a>
 </div>
-<div class="col-lg-6 col-12">
-    <h3>"Математический анализ"</h3>
-    <p>
-        <ul>
-                <li>Изучить и законспектировать лекцию "Интегралы ФКП"</li>
-                <li>Изучить практикум ФКП, решить задачи 1-5</li>
-                <li>Выполнить задания 1-9 из ТР ТФКП</li>
-        </ul>
-    </p>
-</div>
-</div>
-
-<div class="row">
-    <div class="col-lg-6 col-12">
-    <h3>"Английский Язык" <b>(До 26.03)</b></h3>
-    <p>
-        <ul>
-            <li>Прислать на почту Асташиной оригинальный текст 12к символов + аннотацию + словарь терминов</li>
-            <li>Перевести любые 4 абзаца из всего материала</li>
-            <br>
-            <li>Реферат (???????????????)</li>
-        </ul>
-    </p>
-    </div>
-    <div class="col-lg-6 col-12">
-            <h3>"Програмирование"</h3>
-            <p>
-                <ul>
-                    <li>Делай лабы и не выебывайся</li>
-                </ul>
-            </p>
-            </div>
-</div>
-<div style="margin:0px" class="row">
-    <h3>"Теория Вероятности и математическая статистика"</h3>
-    <p>
-        <ul>
-                <li>Необходимо изучить: электронный учебник (ЭУ) глава 1, глава 2 (2.1; 2.3; 2.4; 2.5);<br>
-                     ТВ под ред. Зарубина 1.3. Сигма-алгебра событий (стр. 32-35),<br> 2.5 Аксиоматическое определение вероятности ( стр.59-66);<br> 
-                     ТВ Битнер Г.Г. (стр.17-18)</li>
-                <li>Необходимо выполнить: задания предыдущего занятия; изучить ЭУ и разобрать приведенные примеры: <br>
-                    глава 2 (2.2 Вычисление вероятностей с помощью формул комбинаторики, <br>Схема выбора, приводящая к сочетаниям, Схема выбора, приводящая к размещениям). <br>
-                    Прислать задание нужно в виде отчетов с вопросами, <br> ответами и решениями задач до 24.03.2020, на электронную почту.</li>
-                <li>Выполнить задания 1-9 из ТР ТФКП</li>
-        </ul>
-    <p>
-        <ol>
-По окончании изучения материала до 24.03.2020 нужно пройти тестирование для чего использовать тестовые <br> контрольные вопросы и задания по дисциплине ТВи МС по следующим разделам: <br>
-
-<li>Основные понятия.Непосредственный подсчет вероятностей № 1 - № 2. </li>
-
-<li>Классическое определение вероятностей №13 - №23. </li>
-
-<li> Комбинаторный метод вычисления вероятностей №24, 25, 26, 27, 28. </li>
-
-Тесты прилагаются. Ответы присылать электронную почту. <br>
-
-Отчеты о выполненной работе с ответами и решениями помещать<br> в личный кабинет каждого в электронной образовательной среде.
-
-        </ol>
-</p>>
-    </p>
-    </div>
 </body>
 </html>
